--- a/servicios.html
+++ b/servicios.html
@@ -52,9 +52,6 @@
             <a class="nav-link js-scroll-trigger" href="#about">Recursos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">¿Por qué elegirnos?</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="./contacto.html">Contacto</a>
           </li>
         </ul>
@@ -98,19 +95,19 @@
             participativa</span>
           <ul>
             <li>
-              Proyecto Pedabot
+              <a class="link-pedabot" href="./pedabot.html">Proyecto Pedabot</a>
             </li>
             <li>
               Proyecto "EnREDados"
             </li>
             <li>
-              Proyecto "CONCIENCIA TIC"
+              Proyecto "conCIENCIA TIC"
             </li>
             <li>
               Proyecto "STOP Ciberbullying"
             </li>
             <li>
-              Proyecto "Familiarizándome con las TIC"
+              Proyecto "Familiarízate con las TIC"
             </li>
           </ul>
         </div>
@@ -120,8 +117,8 @@
           <h2>ASESORAMIENTO</h2>
         </div>
         <div class="col-md-6">
-          <p>Nuestro equipo ofrece un servicio de asesororamiento en TIC al profesorado. Como especialistas, tratamos
-            de facilitar el día a día de la profesión docente, ayudando a buscar soluciones. El asesoramiento podrá
+          <p>Nuestro equipo ofrece un servicio de asesoramiento en TIC al profesorado. Como especialistas, tratamos
+            de facilitar el día a día de la profesión docente, ayudando a buscar soluciones. El asesoramiento se podrá
             realizar de manera virtual o presencial.</p>
           <div class="text-center">
             <a class="btn btn-primary text-uppercase js-scroll-trigger" href="./contacto.html">Contacta con
@@ -136,11 +133,25 @@
   <footer class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <div>educapex@gmail.com</div>
-          <div>922 87 90 62</div>
+        <div class="col-md-4">
+          <div>educapex@gmail.com <i class="fas fa-envelope"></i></div>
+          <div>922 87 90 62 <i class="fas fa-phone"></i></div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
+          <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4">
           <a class="navbar-brand js-scroll-trigger" href="index.html"><img id="logo"
               src="img/Logo empresa tecnología2.png" alt="Logo de la empresa"></a>
         </div>
