--- a/recursos.html
+++ b/recursos.html
@@ -63,45 +63,21 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-heading text-uppercase">Pedabot</div>
+        <div class="intro-heading text-uppercase">Recursos económicos</div>
       </div>
     </div>
   </header>
 
-  <section class="bg-light page-section" id="team">
+  <section class="bg-light page-section">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <p>“Pedabot” es un proyecto pedagógico de robótica con base científica y tecnológica
-            que tiene el objetivo de desarrollar la competencia computacional entre el alumnado. Es un proyecto que nace
-            de la colaboración con el INTECH Tenerife y participa en el Reto Tenerife 2030 “Tenerife una isla al
-            exterior”.</p>
-          <p>Pedabot se implementa en las aulas a través de la metodología del Aprendizaje Basado en Proyectos, ya que
-            además de las competencias propias vinculadas a las materias y los aprendizajes curriculares, también se
-            pretende fomentar el desarrollo de “soft skills” como la autonomía, el trabajo en grupo, respetar tiempos de
-            trabajo, establecer roles y funciones, buscar y diseminar información, marcarse objetivos de trabajo,etc.
-          </p>
-          <p>El proyecto pretende que el alumnado aprenda a construir un dron a lo largo de dos trimestres escolares,
-            tratando de integrar todas las materias en la experiencia de aprendizaje.<br>
-            El proyecto se implementa en tres fases diferenciadas que se desarrollarán en dos trimestres del curso.
-            <ol>
-              <li><b>Fase de Investigación:</b> en la que el alumnado tendrá que aprender a buscar la información
-                necesaria en
-                internet, seleccionarla y usarla de manera consciente.</li>
-              <li><b>Fase de ideación y diseño del proyecto:</b> cada grupo de trabajo deberá idear y diseñar un dron
-                con una
-                utilidad y unos materiales determinados.</li>
-              <li><b>Fase de elaboración de un prototipo del dron diseñado:</b> el alumnado contará con los materiales y
-                software
-                necesarios para la construcción del dron.</li>
-            </ol>
-          </p>
-          <p><b>Duración:</b> 22 horas</p>
-          <p><b>Metodología:</b> a través de ABP</p>
-          <p><b>Implementado por:</b> pedagogos/as</p>
-          <p><b>Presupuesto total del proyecto:</b> 2000 euros</p>
-          <p class="text-right"><a class="btn btn-primary text-uppercase js-scroll-trigger"
-              href="./contacto.html">Contacta con nosotros</a></p>
+          <h2>Modelo de negocio</h2>
+          <p>Nuestro modelo de negocio se articula sobre la base del modelo de empresa llamado SLNE (Sociedad Limitada
+            Nueva Empresa). </p>
+          <p>En Educapex obtenemos ingresos a través de la venta de nuestros servicios educativos. Todos nuestros
+            servicios se cobran a través de transferencia bancaria a la cuenta de la empresa.</p>
+          <img src="img/Captura de pantalla.png" alt="Modelo de negocio">
         </div>
       </div>
     </div>
