--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a class="nav-link js-scroll-trigger" href="./servicios.html">Servicios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Recursos</a>
+            <a class="nav-link js-scroll-trigger" href="./recursos.html">Recursos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">¿Por qué elegirnos?</a>
@@ -68,6 +68,7 @@
       <div class="intro-text">
         <div class="intro-heading text-uppercase">Bienvenidos a Educapex</div>
         <div class="intro-lead-in">Respuestas educativas y mundo TIC</div>
+        <div class="intro-lead-in">"La educación del presente"</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./quienes-somos.html">Cuéntame más</a>
       </div>
     </div>
@@ -100,7 +101,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-user-tie fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">ASESORAMIENTO</h4>
         </div>
@@ -121,93 +122,46 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">Proyectos</h2>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+          <a class="portfolio-link" href="./pedabot.html">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/drons 1web.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4>Proyecto Pedabot</h4>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
-          </a>
+          <img class="img-fluid" src="img/social-networks.jpeg" alt="">
           <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4>Proyecto "enREDados"</h4>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
-          </a>
+          <img class="img-fluid"
+            src="img/RadioRumbos.Net-Diseñan-proyecto-para-enseñar-historia-a-través-de-la-tecnología.jpg" alt="">
           <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
+            <h4>Proyecto "conCIENCIA TIC"</h4>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
-          </a>
+          <img class="img-fluid" src="img/Ciberbullying-acoso-sexual-y-redes-sociales-Es-lo-normal-1.jpg" alt="">
           <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
+            <h4>Proyecto "STOPCiberbullyng</h4>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
-          </a>
+          <img class="img-fluid" src="img/familia-usando-computadora-portatil-mesa_13339-22580.jpg" alt="">
           <div class="portfolio-caption">
-            <h4>Southwest</h4>
-            <p class="text-muted">Website Design</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Window</h4>
-            <p class="text-muted">Photography</p>
+            <h4>Proyecto "Familiarízate con las TIC"</h4>
           </div>
         </div>
       </div>
@@ -251,12 +205,12 @@
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-twitter"></i>
+                <i class="fab fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-instagram"></i>
               </a>
             </li>
           </ul>
