--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -49,7 +49,7 @@
             <a class="nav-link js-scroll-trigger" href="./servicios.html">Servicios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Recursos</a>
+            <a class="nav-link js-scroll-trigger" href="./recursos.html">Recursos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="./contacto.html">Contacto</a>
@@ -138,12 +138,12 @@
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-twitter"></i>
+                <i class="fab fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-instagram"></i>
               </a>
             </li>
           </ul>
